# cedar

./: .clangd  CMakeLists.txt  README.md
includes/: cedar.h  cedarpp.h
src/: cedar.cpp  mkcedar.cpp
